# Vehicle

./: main.cpp
Example1/: CMakeLists.txt  Get_Info.h  includInfo.h  privateData.h  rhs.cpp
Example1/plot_and_coordTrans/: DIconstraints_s.csv  StatesBD_DI_CST.csv  StatesBD_SDI.csv  StatesBD_SDI_2.csv  coordtrans2.py  origPosSDI.csv  privateData.h  ref.csv
double_integrator/: CMakeLists.txt  DI_CST_advance.cpp  Get_Info.h  SDI.cpp  main.cpp  privateData.h  rhs.cpp
double_integrator/plot_and_coordTrans/: DI_CST_orig.csv  SDI_orig.csv  SDI_s.csv  StatesBD_DI_CST.csv  StatesBD_DI_CST2.csv  StatesBD_DI_CST_57.csv  StatesBD_DI_CST_advance.csv  advanceDI_s.csv  coorTran.cpp  coordtrans2.py  origPosDI_CST.csv  plotcpp.py  sample_orig.csv
kinematics/: CMakeLists.txt  DI_CST.cpp  Get_Info.h  MainHeader.h  privateData.h  rhs.cpp  trajSampling.cpp
kinematics/plot_and_coordTrans/: CMakeLists.txt  DI_CST_orig.csv  States.csv  StatesBD_DI_CST.csv  StatesBD_DI_CST_advance.csv  StatesBD_SDI.csv  coordtrans2.py  origPosDI_CST.csv  origPosSDI.csv  plotcpp.py  sample_orig.csv
scr/: DI_CST.cpp  DI_CST_advance.cpp  MainHeader.h  SDI.cpp  includInfo.h  main.cpp  trajSampling.cpp
